@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2005/11/04 07:21:24 rillig Exp $
+$NetBSD: distinfo,v 1.2 2005/11/08 20:10:08 rillig Exp $
 
-SHA1 (Coin-2.2.1.tar.gz) = 3b79dbb51c53894027ae73c2db79b9ed978b12b1
-RMD160 (Coin-2.2.1.tar.gz) = 9eda53c57b3e27f34463d97aa75ad42cbe817d4f
-Size (Coin-2.2.1.tar.gz) = 3011673 bytes
+SHA1 (Coin-2.4.4.tar.gz) = 5482b8ad371484ab3194b2bef828297a1b059c33
+RMD160 (Coin-2.4.4.tar.gz) = 6bdeabf38809c2cf0873c85f030fe3392dec89f3
+Size (Coin-2.4.4.tar.gz) = 3784368 bytes
